--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,34 @@
 asgiref==3.8.1
+asttokens==2.4.1
+black==24.4.2
+click==8.1.7
+colorama==0.4.6
+decorator==5.1.1
 Django==4.2.9
 django-dump-load-utf8==0.0.4
 django-filter==24.2
 djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
+executing==2.0.1
+ipython==8.24.0
+isort==5.13.2
+jedi==0.19.1
+matplotlib-inline==0.1.7
+mypy-extensions==1.0.0
+packaging==24.0
+parso==0.8.4
+pathspec==0.12.1
 pillow==10.3.0
+platformdirs==4.2.1
+prompt-toolkit==3.0.43
 psycopg2==2.9.9
+pure-eval==0.2.2
+Pygments==2.18.0
+PyJWT==2.8.0
 python-dotenv==1.0.1
+six==1.16.0
 sqlparse==0.5.0
+stack-data==0.6.3
+traitlets==5.14.3
 tzdata==2024.1
+wcwidth==0.2.13
