--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asttokens==2.4.1
 black==24.4.2
 click==8.1.7
 colorama==0.4.6
+coverage==7.5.1
 decorator==5.1.1
 Django==4.2.9
 django-dump-load-utf8==0.0.4
