--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,12 @@ django-filter==24.2
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 executing==2.0.1
+flake8==7.0.0
 ipython==8.24.0
 isort==5.13.2
 jedi==0.19.1
 matplotlib-inline==0.1.7
+mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==24.0
 parso==0.8.4
@@ -24,6 +26,8 @@ platformdirs==4.2.1
 prompt-toolkit==3.0.43
 psycopg2==2.9.9
 pure-eval==0.2.2
+pycodestyle==2.11.1
+pyflakes==3.2.0
 Pygments==2.18.0
 PyJWT==2.8.0
 python-dotenv==1.0.1
