--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,18 @@ black==24.4.2
 click==8.1.7
 colorama==0.4.6
 coverage==7.5.1
+CurrencyConverter==0.17.21
 decorator==5.1.1
 Django==4.2.9
 django-dump-load-utf8==0.0.4
 django-filter==24.2
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.7
 executing==2.0.1
 flake8==7.0.0
+forex-python==1.8
+inflection==0.5.1
 ipython==8.24.0
 isort==5.13.2
 jedi==0.19.1
@@ -31,9 +35,14 @@ pyflakes==3.2.0
 Pygments==2.18.0
 PyJWT==2.8.0
 python-dotenv==1.0.1
+pytz==2024.1
+PyYAML==6.0.1
+setuptools==69.5.1
 six==1.16.0
 sqlparse==0.5.0
 stack-data==0.6.3
+stripe==9.6.0
 traitlets==5.14.3
 tzdata==2024.1
+uritemplate==4.1.1
 wcwidth==0.2.13
