--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,11 @@ POSTGRES_PORT=
 POSTGRES_HOST=
 
 STRIPE_API_KEY=
+
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
