--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 asttokens==2.4.1
 black==24.4.2
+celery==5.4.0
 click==8.1.7
 colorama==0.4.6
 coverage==7.5.1
@@ -37,6 +38,7 @@ PyJWT==2.8.0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
+redis==5.0.4
 setuptools==69.5.1
 six==1.16.0
 sqlparse==0.5.0
