Added docker settings and dockerfile.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,44 @@
+amqp==5.2.0
 asgiref==3.8.1
 asttokens==2.4.1
+attrs==23.2.0
+billiard==4.2.0
 black==24.4.2
 celery==5.4.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.6
 coverage==7.5.1
+cron-descriptor==1.4.3
 CurrencyConverter==0.17.21
 decorator==5.1.1
 Django==4.2.9
+django-celery-beat==2.6.0
 django-dump-load-utf8==0.0.4
 django-filter==24.2
+django-timezone-field==6.1.0
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+dnspython==2.6.1
+drf-spectacular==0.27.2
 drf-yasg==1.21.7
+eventlet==0.36.1
 executing==2.0.1
 flake8==7.0.0
 forex-python==1.8
+greenlet==3.0.3
+idna==3.7
 inflection==0.5.1
 ipython==8.24.0
 isort==5.13.2
 jedi==0.19.1
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+kombu==5.3.7
 matplotlib-inline==0.1.7
 mccabe==0.7.0
 mypy-extensions==1.0.0
@@ -29,22 +48,32 @@ pathspec==0.12.1
 pillow==10.3.0
 platformdirs==4.2.1
 prompt-toolkit==3.0.43
+psycopg-binary==3.1.19
 psycopg2==2.9.9
 pure-eval==0.2.2
 pycodestyle==2.11.1
 pyflakes==3.2.0
 Pygments==2.18.0
 PyJWT==2.8.0
+python-crontab==3.0.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 redis==5.0.4
+referencing==0.35.1
+requests==2.31.0
+rpds-py==0.18.1
 setuptools==69.5.1
+simplejson==3.19.2
 six==1.16.0
 sqlparse==0.5.0
 stack-data==0.6.3
 stripe==9.6.0
 traitlets==5.14.3
+typing_extensions==4.11.0
 tzdata==2024.1
 uritemplate==4.1.1
+urllib3==2.2.1
+vine==5.1.0
 wcwidth==0.2.13
